<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/modCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_code"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/modName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_name"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/acadYr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/academic_year"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/needsUke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/semester"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/modCred"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_credit"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/venue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/venue"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />
    </LinearLayout>

</LinearLayout>