<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/modAP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modAP"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/modIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modIP"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/allMod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allMods"
        android:textSize="24sp" />

</LinearLayout>