<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AllMods">

    <TextView
        android:id="@+id/diploma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diploma"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/mods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/mod1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/mod2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/totalCred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_credit"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />
    </LinearLayout>

</LinearLayout>